<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/drawer_height"
    android:background="@color/teal_200"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="32sp"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/drawer_header"
        android:src="@drawable/drawer_header"
        />

    <TextView
        android:id="@+id/tv_inf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inf"
        android:textSize="24sp"/>

</LinearLayout>